[gd_scene load_steps=12 format=3 uid="uid://dssw1xv8c6ycs"]

[ext_resource type="Script" path="res://scenes/UI/Distance_Value.gd" id="1_ves6g"]
[ext_resource type="Texture2D" uid="uid://bnmnke3i8lpte" path="res://images/UI/food_white.png" id="2_2lrsp"]
[ext_resource type="Texture2D" uid="uid://bgfa5gwds27xf" path="res://images/UI/food_blue.png" id="2_exgn0"]
[ext_resource type="Texture2D" uid="uid://bg0cxntrfbsqd" path="res://images/UI/food_red.png" id="3_evuxf"]
[ext_resource type="Texture2D" uid="uid://bb7b1nm7n8pcj" path="res://images/UI/food_orange.png" id="3_w6nkc"]
[ext_resource type="Texture2D" uid="uid://gcnl13vqanpc" path="res://images/UI/food_green.png" id="4_bstgo"]
[ext_resource type="Script" path="res://scenes/UI/Inventory.gd" id="4_v6x2b"]
[ext_resource type="Texture2D" uid="uid://2xdextxcgjxu" path="res://images/UI/food_purple.png" id="5_c6b1f"]
[ext_resource type="Texture2D" uid="uid://b2uv8w77lrjjd" path="res://images/UI/food_teal.png" id="6_7ggep"]
[ext_resource type="Texture2D" uid="uid://b5hxbfpopwx15" path="res://images/UI/food_yellow.png" id="6_l0pit"]
[ext_resource type="Script" path="res://scenes/UI/Food_Request.gd" id="6_xxpus"]

[node name="Main_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(155, 110)
scale = Vector2(0.725, 0.725)
transform = Transform2D(0.725, 0, 0, 0.725, 155, 110)

[node name="Distance" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 749.828
offset_top = -67.1034
offset_right = 828.828
offset_bottom = -39.1034
text = "Distance:"

[node name="To_Next_Level" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 938.0
offset_top = 119.0
offset_right = 1060.0
offset_bottom = 147.0
text = "To Next Level:"

[node name="Distance_Value" type="RichTextLabel" parent="CanvasLayer" groups=["get_speed"]]
offset_left = 824.828
offset_top = -66.1034
offset_right = 934.828
offset_bottom = -37.1034
fit_content = true
scroll_active = false
script = ExtResource("1_ves6g")
speed = 0.5

[node name="To_Next_Level_Value" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 1058.0
offset_top = 120.0
offset_right = 1125.0
offset_bottom = 149.0
text = "0"

[node name="Inventory" type="ItemList" parent="CanvasLayer"]
offset_left = -215.172
offset_top = -153.103
offset_right = 935.828
offset_bottom = -81.1034
item_count = 7
max_columns = 10
fixed_icon_size = Vector2i(60, 60)
item_0/text = ""
item_0/icon = ExtResource("3_evuxf")
item_1/text = ""
item_1/icon = ExtResource("3_w6nkc")
item_2/text = ""
item_2/icon = ExtResource("6_l0pit")
item_3/text = ""
item_3/icon = ExtResource("4_bstgo")
item_4/text = ""
item_4/icon = ExtResource("6_7ggep")
item_5/text = ""
item_5/icon = ExtResource("2_exgn0")
item_6/text = ""
item_6/icon = ExtResource("5_c6b1f")
script = ExtResource("4_v6x2b")

[node name="Thought_Bubble" type="TextureRect" parent="CanvasLayer"]
offset_left = 114.483
offset_top = 286.897
offset_right = 387.483
offset_bottom = 528.897
texture = ExtResource("2_2lrsp")

[node name="Food_Request" type="TextureRect" parent="CanvasLayer/Thought_Bubble"]
layout_mode = 0
offset_left = 73.0
offset_top = 57.0
offset_right = 201.0
offset_bottom = 185.0
texture = ExtResource("2_2lrsp")
script = ExtResource("6_xxpus")

[node name="SlowDown" type="Timer" parent="CanvasLayer"]
wait_time = 1.4
autostart = true

[node name="Timer" type="Timer" parent="CanvasLayer"]

[connection signal="item_selected" from="CanvasLayer/Inventory" to="CanvasLayer/Inventory" method="_on_item_selected"]
[connection signal="timeout" from="CanvasLayer/SlowDown" to="CanvasLayer/Distance_Value" method="_on_slow_down_timeout"]
[connection signal="timeout" from="CanvasLayer/Timer" to="CanvasLayer/Inventory" method="_on_timer_timeout"]
